--- a/exam01/exam01.vcxproj
+++ b/exam01/exam01.vcxproj
@@ -119,6 +119,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="condition.c" />
     <ClCompile Include="scanf.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
