반복문 for, while ,구구단

--- a/exam01/exam01.vcxproj
+++ b/exam01/exam01.vcxproj
@@ -120,6 +120,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="condition.c" />
+    <ClCompile Include="loop.c" />
     <ClCompile Include="scanf.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
