--- a/exam01/exam01.vcxproj.filters
+++ b/exam01/exam01.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="loop.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="functions.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
